--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -23,6 +23,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.axonframework.extensions.jgroups</groupId>
+            <artifactId>axon-jgroups-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
             <scope>compile</scope>
