--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <axon.version>4.1.1</axon.version>
+        <axon-extension.version>4.1</axon-extension.version>
         <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
         <h2.version>1.4.199</h2.version>
         <junit.version>4.12</junit.version>
@@ -31,6 +32,11 @@
                         <artifactId>axon-server-connector</artifactId>
                     </exclusion>
                 </exclusions>-->
+            </dependency>
+            <dependency>
+                <groupId>org.axonframework.extensions.jgroups</groupId>
+                <artifactId>axon-jgroups-spring-boot-starter</artifactId>
+                <version>${axon-extension.version}</version>
             </dependency>
 
             <dependency>
