--- a/pom.xml
+++ b/pom.xml
@@ -22,20 +22,34 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-parent</artifactId>
+                <version>Greenwich.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <dependency>
                 <groupId>org.axonframework</groupId>
                 <artifactId>axon-spring-boot-starter</artifactId>
                 <version>${axon.version}</version>
-<!--                <exclusions>
-                    <exclusion>
-                        <groupId>org.axonframework</groupId>
-                        <artifactId>axon-server-connector</artifactId>
-                    </exclusion>
-                </exclusions>-->
+                <!--                <exclusions>
+                                    <exclusion>
+                                        <groupId>org.axonframework</groupId>
+                                        <artifactId>axon-server-connector</artifactId>
+                                    </exclusion>
+                                </exclusions>-->
             </dependency>
             <dependency>
                 <groupId>org.axonframework.extensions.jgroups</groupId>
                 <artifactId>axon-jgroups-spring-boot-starter</artifactId>
+                <version>${axon-extension.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.axonframework.extensions.springcloud</groupId>
+                <artifactId>axon-springcloud-spring-boot-starter</artifactId>
                 <version>${axon-extension.version}</version>
             </dependency>
 
@@ -54,8 +68,36 @@
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-jpa</artifactId>
                 <version>${spring-boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-config</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+                <version>2.1.1.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-eureka</artifactId>
+                <version>1.4.6.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
             </dependency>
 
             <dependency>
@@ -110,7 +152,8 @@
 
     <modules>
         <module>order-service</module>
-        <module>product-service</module>
+        <module>eureka-server</module>
+        <module>h2-server</module>
     </modules>
 
 </project>
