--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 axon.distributed.enabled=true
 eureka.instance.hostname=localhost
 
-spring.datasource.url=jdbc:h2:tcp://localhost:8081/axondb
+spring.datasource.url=jdbc:h2:tcp://localhost:8556/axondb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.data-username=
 spring.datasource.data-password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create
