--- a/h2-server/pom.xml
+++ b/h2-server/pom.xml
@@ -28,4 +28,23 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>dev.snowdrop.server.H2Server</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
