--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 axon.distributed.enabled=true
 eureka.instance.hostname=localhost
 
-spring.datasource.url=jdbc:h2:tcp://localhost:8556/axondb
+spring.datasource.url=jdbc:h2:tcp://localhost:8556/axondb;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.data-username=
 spring.datasource.data-password=
