--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -14,16 +14,19 @@
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-spring-boot-starter</artifactId>
-            <!-- As we will not use the Axon Server, then we disable the Axon client connector -->
+            <!-- As we will not use the Axon Server, then we disable the Axon client connector
             <exclusions>
                 <exclusion>
                     <groupId>org.axonframework</groupId>
                     <artifactId>axon-server-connector</artifactId>
                 </exclusion>
             </exclusions>
+            -->
         </dependency>
 
-        <dependency>
+      <!--
+      Spring Cloud
+      <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
@@ -33,11 +36,12 @@
             <artifactId>spring-cloud-commons</artifactId>
         </dependency>
 
-        <!-- Axon -->
+        &lt;!&ndash; Axon &ndash;&gt;
         <dependency>
             <groupId>org.axonframework.extensions.springcloud</groupId>
             <artifactId>axon-springcloud-spring-boot-starter</artifactId>
         </dependency>
+        -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
