--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -9,13 +9,19 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>eureka-server</artifactId>
+    <artifactId>gateway</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -31,7 +37,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>dev.snowdrop.axon.eureka.EurekaApplication</mainClass>
+                    <mainClass>dev.snowdrop.axon.gateway.AxonGatewayApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
