--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-log4j2</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-config</artifactId>
             </dependency>
@@ -86,6 +92,11 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+                <version>2.1.1.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
                 <version>2.1.1.RELEASE</version>
             </dependency>
 
@@ -154,6 +165,7 @@
         <module>order-service</module>
         <module>eureka-server</module>
         <module>h2-server</module>
+        <module>gateway</module>
     </modules>
 
 </project>
