--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.projectreactor.netty</groupId>
+            <artifactId>reactor-netty</artifactId>
+            <version>0.8.8.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
